--- a/1.html
+++ b/1.html
@@ -23,8 +23,8 @@
   "use strict";
 
   const Celsiy = +prompt('Введите температуру в С`');
-  const Fareng = parseInt(Celsiy * (9/5) + 32);
-  alert (`Цельсий: ${Celsiy} Фаренгейт: ${Fareng}`);
+  const Farenget = parseInt(Celsiy * (9/5) + 32);
+  alert (`Цельсий: ${Celsiy} Фаренгейт: ${Farenget}`);
 
 </script>
 </body>
