--- a/2.html
+++ b/2.html
@@ -18,7 +18,7 @@
   
   let name = 'Alex';
   let admin = name;
-  console.log(admin)
+  console.log(admin);
 
   // Здесь пишем решение, данный комментарий необходимо стереть.
 </script>
