--- a/3.html
+++ b/3.html
@@ -33,25 +33,25 @@ console.log(3 - 4 * 2);
 /* 
 Сумма двух целочисленных десяток 20 конкатинируем со строкой 10 и получаем 2010
 */
-console.log(10 + 10 + "10")
+console.log(10 + 10 + "10");
 /* 
 Конкатинируем строку по середине с целочисленными значениями по краям и получаем 101010
 */
-console.log(10 + "10" + 10)
+console.log(10 + "10" + 10);
 /* 
 Складываем три целочисленные 10 так как последняя строковая 10 переводится в число через + перед
 */
-console.log(10 + 10 + +"10")
+console.log(10 + 10 + +"10");
 /* 
 Деление на -0, так как пустая строка переводится в число знаком - перед и становится отрицательным, в JS так делать можно
 получаем -бесконечность
 */
-console.log(10 / -"")
+console.log(10 / -"");
 /* 
 Получаем NaN, потому что перевести строку в число не получилось из-за неправильного написания дробных чисел через , 
 а нужно .
 */
-console.log(10 / +"2,5")
+console.log(10 / +"2,5");
 
 </script>
 </body>
