--- a/4.html
+++ b/4.html
@@ -28,9 +28,9 @@
 <script>
   "use strict";
 
-const num = +prompt('введите положительное целое число')
+const num = +prompt('введите положительное целое число');
 alert (`В числе ${num} количество сотен: ${parseInt((num%1000)/100)}, десятков: ${parseInt((num%100)/10)}, 
-единиц: ${parseInt(num%10)}`)
+единиц: ${parseInt(num%10)}`);
 </script>
 </body>
 </html>
