--- a/3.1.html
+++ b/3.1.html
@@ -17,13 +17,14 @@
 10 – четное число
 -->
 <script>
+
   "use strict";
   for (let i = 0; i < 11; i++) {
     if (i === 0) {
       console.log(`${i} - это ноль`);
-    } else if (i%2 === 0) {
+    } else if (i % 2 === 0) {
       console.log(`${i} - это четное число`);
-    } else console.log(`${i} - это нечетное число`)
+    } else {console.log(`${i} - это нечетное число`);}
   }
   
 </script>
